--- a/code/Mud/mainwindow.ui
+++ b/code/Mud/mainwindow.ui
@@ -41,7 +41,7 @@
       <item>
        <widget class="Sidebar" name="widget" native="true">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
