--- a/code/Mud/mainwindow.ui
+++ b/code/Mud/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>812</width>
+    <height>602</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -39,7 +39,7 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="Sidebar" name="widget" native="true">
+       <widget class="Sidebar" name="sidebar" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
           <horstretch>0</horstretch>
