--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -62,6 +62,9 @@
       </item>
       <item row="1" column="0" colspan="2">
        <widget class="QComboBox" name="gridTypeDistribution">
+        <property name="currentIndex">
+         <number>1</number>
+        </property>
         <item>
          <property name="text">
           <string>Uniform</string>
