--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -167,7 +167,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="breakingSpringsParameterDescription">
         <property name="text">
-         <string>TextLabel</string>
+         <string>X</string>
         </property>
        </widget>
       </item>
@@ -179,7 +179,18 @@
        </widget>
       </item>
       <item row="0" column="0" colspan="3">
-       <widget class="QComboBox" name="comboBox"/>
+       <widget class="QComboBox" name="comboBox">
+        <item>
+         <property name="text">
+          <string>X springs with the highest strain</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Springs with a strain that is greater than X</string>
+         </property>
+        </item>
+       </widget>
       </item>
       <item row="3" column="2">
        <widget class="QLabel" name="breakingSpringsMax">
