Select break method via ui works.

--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -172,14 +172,14 @@
        </widget>
       </item>
       <item row="2" column="0" colspan="3">
-       <widget class="QSlider" name="horizontalSlider_2">
+       <widget class="QSlider" name="breakingSpringsParameterSlider">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
       <item row="0" column="0" colspan="3">
-       <widget class="QComboBox" name="comboBox">
+       <widget class="QComboBox" name="springBreakingMethod">
         <item>
          <property name="text">
           <string>X springs with the highest strain</string>
