--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -162,6 +162,9 @@
         <property name="text">
          <string>TextLabel</string>
         </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
        </widget>
       </item>
       <item row="1" column="0">
