--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -228,5 +228,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>horizontalSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>label_2</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>306</x>
+     <y>86</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>305</x>
+     <y>117</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
