--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -180,22 +180,5 @@
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>horizontalSlider</sender>
-   <signal>actionTriggered(int)</signal>
-   <receiver>label</receiver>
-   <slot>setNum(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>495</x>
-     <y>423</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>538</x>
-     <y>418</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
