--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -91,7 +91,7 @@
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="NumParticleLabel">
         <property name="text">
          <string>Number of Particles:</string>
         </property>
@@ -180,5 +180,22 @@
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>horizontalSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>label</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>483</x>
+     <y>419</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>533</x>
+     <y>419</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
