--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>612</width>
-    <height>490</height>
+    <height>542</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -148,7 +148,7 @@
       <item row="6" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Spring Constant Standard Deviation:</string>
+         <string>Spring Constant SD:</string>
         </property>
        </widget>
       </item>
