--- a/code/Mud/sidebar.ui
+++ b/code/Mud/sidebar.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>612</width>
-    <height>542</height>
+    <height>755</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -230,17 +230,24 @@
       <string>Simulation</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="0">
+      <item row="1" column="0">
        <widget class="QPushButton" name="simulateStepButton">
         <property name="text">
          <string>Break</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QPushButton" name="doStabilizeButton">
         <property name="text">
          <string>Stabilize</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="energyLabel">
+        <property name="text">
+         <string>Energy: 0</string>
         </property>
        </widget>
       </item>
